# dolphin-math

./: AGENTS.md  DESIGN.md  OPCODES.md  PROBLEM_TYPES.md  README.md  TODO.md  ToDo.md  base_generator.py  curriculum.py  dataset_plan.md  dolphin_math_datagen.py  handoff.md  helpers.py  pyproject.toml  review_problem_types.md
dolphin-math/: AGENTS.md  README.md  dolphin_math_datagen.py  pyproject.toml
dolphin-math/generators/: angle_relationships_generator.py  decimal_div_generator.py  evaluate_expression_generator.py  fraction_op_generator.py  linear_complex_generator.py  long_division_generator.py  mixed_number_operations_random.py  multi_digit_addition_generator.py  order_of_operations_generator.py  place_value_rounding_generator.py  polygon_perimeter_generator.py  proportional_relationship_generator.py  quadratic_generator.py  simplify_expression_generator.py  unit_conversion_generator.py  unit_rate_generator.py  volume_3d_generator.py
dolphin-math/tests/: test_angle_relationships_generator.py  test_circle_generator.py  test_compound_probability_generator.py  test_decimal_div_generator.py  test_decimal_mult_generator.py  test_evaluate_expression_generator.py  test_exponent_generator.py  test_factors_generator.py  test_fraction_comparison_generator.py  test_fraction_decimal_percent_converter.py  test_fraction_op_generator.py  test_gcf_generator.py  test_geometry_area_perimeter_generator.py  test_integer_operations_generator.py  test_lcm_generator.py  test_linear_simple_generator.py  test_long_division_generator.py  test_mixed_number_operation_generator.py  test_mixed_number_operations_random.py  test_multi_digit_multiplication_generator.py  test_multi_digit_subtraction_generator.py  test_pythag_leg_generator.py  (+17 more)
(+476 files in other folders)
