[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quixi-math"
version = "0.1.0"
description = "Synthetic math problem generator with step-by-step solutions for training data."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []
keywords = ["math", "dataset", "generator", "education"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]

[dependency-groups]
dev = ["pytest>=8.0"]
# Parquet writer used by tools/build_hf_release.py for Hugging Face releases.
release = ["pyarrow==20.0.0"]

[tool.setuptools]
py-modules = ["quixi_math_datagen", "base_generator", "helpers", "curriculum"]

[tool.setuptools.packages.find]
include = ["generators"]
exclude = ["tests"]
